v25/api/keyfactor/v1/docs/KeyfactorWebCoreModelsEnrollmentEnrollmentCA.md
# KeyfactorWebCoreModelsEnrollmentEnrollmentCA

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**Id** | Pointer to **int32** |  | [optional] 
**Name** | Pointer to **NullableString** |  | [optional] 
**DisplayName** | Pointer to **NullableString** |  | [optional] 
**RFCEnforcement** | Pointer to **bool** |  | [optional] 
**SubscriberTerms** | Pointer to **bool** |  | [optional] 

## Methods

### NewKeyfactorWebCoreModelsEnrollmentEnrollmentCA

`func NewKeyfactorWebCoreModelsEnrollmentEnrollmentCA() *KeyfactorWebCoreModelsEnrollmentEnrollmentCA`

NewKeyfactorWebCoreModelsEnrollmentEnrollmentCA instantiates a new KeyfactorWebCoreModelsEnrollmentEnrollmentCA object
This constructor will assign default values to properties that have it defined,
and makes sure properties required by API are set, but the set of arguments
will change when the set of required properties is changed

### NewKeyfactorWebCoreModelsEnrollmentEnrollmentCAWithDefaults

`func NewKeyfactorWebCoreModelsEnrollmentEnrollmentCAWithDefaults() *KeyfactorWebCoreModelsEnrollmentEnrollmentCA`

NewKeyfactorWebCoreModelsEnrollmentEnrollmentCAWithDefaults instantiates a new KeyfactorWebCoreModelsEnrollmentEnrollmentCA object
This constructor will only assign default values to properties that have it defined,
but it doesn't guarantee that properties required by API are set

### GetId

`func (o *KeyfactorWebCoreModelsEnrollmentEnrollmentCA) GetId() int32`

GetId returns the Id field if non-nil, zero value otherwise.

### GetIdOk

`func (o *KeyfactorWebCoreModelsEnrollmentEnrollmentCA) GetIdOk() (*int32, bool)`

GetIdOk returns a tuple with the Id field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetId

`func (o *KeyfactorWebCoreModelsEnrollmentEnrollmentCA) SetId(v int32)`

SetId sets Id field to given value.

### HasId

`func (o *KeyfactorWebCoreModelsEnrollmentEnrollmentCA) HasId() bool`

HasId returns a boolean if a field has been set.

### GetName

`func (o *KeyfactorWebCoreModelsEnrollmentEnrollmentCA) GetName() string`

GetName returns the Name field if non-nil, zero value otherwise.

### GetNameOk

`func (o *KeyfactorWebCoreModelsEnrollmentEnrollmentCA) GetNameOk() (*string, bool)`

GetNameOk returns a tuple with the Name field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetName

`func (o *KeyfactorWebCoreModelsEnrollmentEnrollmentCA) SetName(v string)`

SetName sets Name field to given value.

### HasName

`func (o *KeyfactorWebCoreModelsEnrollmentEnrollmentCA) HasName() bool`

HasName returns a boolean if a field has been set.

### SetNameNil

`func (o *KeyfactorWebCoreModelsEnrollmentEnrollmentCA) SetNameNil(b bool)`

 SetNameNil sets the value for Name to be an explicit nil

### UnsetName
`func (o *KeyfactorWebCoreModelsEnrollmentEnrollmentCA) UnsetName()`

UnsetName ensures that no value is present for Name, not even an explicit nil
### GetDisplayName

`func (o *KeyfactorWebCoreModelsEnrollmentEnrollmentCA) GetDisplayName() string`

GetDisplayName returns the DisplayName field if non-nil, zero value otherwise.

### GetDisplayNameOk

`func (o *KeyfactorWebCoreModelsEnrollmentEnrollmentCA) GetDisplayNameOk() (*string, bool)`

GetDisplayNameOk returns a tuple with the DisplayName field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetDisplayName

`func (o *KeyfactorWebCoreModelsEnrollmentEnrollmentCA) SetDisplayName(v string)`

SetDisplayName sets DisplayName field to given value.

### HasDisplayName

`func (o *KeyfactorWebCoreModelsEnrollmentEnrollmentCA) HasDisplayName() bool`

HasDisplayName returns a boolean if a field has been set.

### SetDisplayNameNil

`func (o *KeyfactorWebCoreModelsEnrollmentEnrollmentCA) SetDisplayNameNil(b bool)`

 SetDisplayNameNil sets the value for DisplayName to be an explicit nil

### UnsetDisplayName
`func (o *KeyfactorWebCoreModelsEnrollmentEnrollmentCA) UnsetDisplayName()`

UnsetDisplayName ensures that no value is present for DisplayName, not even an explicit nil
### GetRFCEnforcement

`func (o *KeyfactorWebCoreModelsEnrollmentEnrollmentCA) GetRFCEnforcement() bool`

GetRFCEnforcement returns the RFCEnforcement field if non-nil, zero value otherwise.

### GetRFCEnforcementOk

`func (o *KeyfactorWebCoreModelsEnrollmentEnrollmentCA) GetRFCEnforcementOk() (*bool, bool)`

GetRFCEnforcementOk returns a tuple with the RFCEnforcement field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetRFCEnforcement

`func (o *KeyfactorWebCoreModelsEnrollmentEnrollmentCA) SetRFCEnforcement(v bool)`

SetRFCEnforcement sets RFCEnforcement field to given value.

### HasRFCEnforcement

`func (o *KeyfactorWebCoreModelsEnrollmentEnrollmentCA) HasRFCEnforcement() bool`

HasRFCEnforcement returns a boolean if a field has been set.

### GetSubscriberTerms

`func (o *KeyfactorWebCoreModelsEnrollmentEnrollmentCA) GetSubscriberTerms() bool`

GetSubscriberTerms returns the SubscriberTerms field if non-nil, zero value otherwise.

### GetSubscriberTermsOk

`func (o *KeyfactorWebCoreModelsEnrollmentEnrollmentCA) GetSubscriberTermsOk() (*bool, bool)`

GetSubscriberTermsOk returns a tuple with the SubscriberTerms field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetSubscriberTerms

`func (o *KeyfactorWebCoreModelsEnrollmentEnrollmentCA) SetSubscriberTerms(v bool)`

SetSubscriberTerms sets SubscriberTerms field to given value.

### HasSubscriberTerms

`func (o *KeyfactorWebCoreModelsEnrollmentEnrollmentCA) HasSubscriberTerms() bool`

HasSubscriberTerms returns a boolean if a field has been set.


[[Back to Model list]](../README.md#documentation-for-models) [[Back to API list]](../README.md#documentation-for-api-endpoints) [[Back to README]](../README.md)


